[gd_scene load_steps=8 format=3 uid="uid://bemrx42bxj1la"]

[ext_resource type="Script" path="res://View_1.gd" id="1_5gusl"]
[ext_resource type="Texture2D" uid="uid://chv0apxhrybee" path="res://Assets/sky-with-clouds-background-pixel-art-set/Clouds/Clouds 2/1.png" id="2_lontg"]
[ext_resource type="Texture2D" uid="uid://dslu6gkwnlndt" path="res://Assets/sky-with-clouds-background-pixel-art-set/Clouds/Clouds 2/2.png" id="3_73i3v"]
[ext_resource type="Texture2D" uid="uid://dth8q82vx8yoa" path="res://Assets/sky-with-clouds-background-pixel-art-set/Clouds/Clouds 2/3.png" id="3_iufwd"]
[ext_resource type="Texture2D" uid="uid://dbosg0o1tk1la" path="res://Assets/sky-with-clouds-background-pixel-art-set/Clouds/Clouds 2/4.png" id="5_1liix"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wjaib"]
bg_color = Color(0.996078, 0.870588, 0.788235, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.886275, 0.729412, 0.831373, 1)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fr2he"]
bg_color = Color(0.996078, 0.870588, 0.788235, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.886275, 0.729412, 0.831373, 1)
border_blend = true
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[node name="Background" type="Node"]
script = ExtResource("1_5gusl")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(585, 258)
scale = Vector2(2.05208, 2.07407)
texture = ExtResource("2_lontg")

[node name="2" type="Sprite2D" parent="."]
position = Vector2(577, 298)
scale = Vector2(2, 3.25926)
texture = ExtResource("3_73i3v")

[node name="Cl_1" type="Sprite2D" parent="."]
position = Vector2(820, 206)
scale = Vector2(2.92014, 3.40741)
texture = ExtResource("3_iufwd")

[node name="7" type="Sprite2D" parent="."]
position = Vector2(858, 551)
scale = Vector2(1.31597, 0.981481)
texture = ExtResource("5_1liix")

[node name="4" type="Sprite2D" parent="."]
position = Vector2(1055, 446)
scale = Vector2(1.63194, 1.81481)
texture = ExtResource("5_1liix")

[node name="5" type="Sprite2D" parent="."]
position = Vector2(-31, 399)
scale = Vector2(1.90625, 1.44444)
texture = ExtResource("5_1liix")

[node name="6" type="Sprite2D" parent="."]
position = Vector2(322, 592)
scale = Vector2(3.62847, 0.814815)
texture = ExtResource("5_1liix")

[node name="Cl_2" type="Sprite2D" parent="."]
position = Vector2(583, 456)
scale = Vector2(2.04167, 1.22222)
texture = ExtResource("3_iufwd")

[node name="Start_Button" type="Button" parent="."]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -84.0
offset_top = -44.5
offset_right = 84.0
offset_bottom = 44.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.682353, 0.635294, 0.807843, 1)
theme_override_colors/font_pressed_color = Color(0.97, 0.5917, 0.76824, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_wjaib")
text = "START"

[node name="Exit_Button" type="Button" parent="."]
process_mode = 3
anchors_preset = -1
anchor_left = 0.576
anchor_top = 0.605
anchor_right = 0.576
anchor_bottom = 0.605
offset_left = -279.552
offset_top = -32.04
offset_right = 104.448
offset_bottom = 56.96
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.721569, 0.662745, 0.831373, 1)
theme_override_colors/font_pressed_color = Color(0.97, 0.5917, 0.76824, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxFlat_fr2he")
text = "EXIT"

[node name="mode_1" type="Button" parent="."]
offset_left = 54.0
offset_top = 195.0
offset_right = 284.0
offset_bottom = 272.0
text = "EASY"

[node name="mode_2" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -203.0
offset_top = -168.0
offset_right = 31.0
offset_bottom = -86.0
grow_horizontal = 2
grow_vertical = 2
text = "NORMAL"

[node name="mode_3" type="Button" parent="."]
offset_left = 817.0
offset_top = 195.0
offset_right = 1030.0
offset_bottom = 272.0
text = "HARD"

[node name="mode_back" type="Button" parent="."]
offset_left = 454.0
offset_top = 491.0
offset_right = 669.0
offset_bottom = 576.0
text = "BACK"

[connection signal="pressed" from="Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="Exit_Button" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="mode_1" to="." method="_on_mode_1_pressed"]
[connection signal="pressed" from="mode_2" to="." method="_on_mode_2_pressed"]
[connection signal="pressed" from="mode_3" to="." method="_on_mode_3_pressed"]
[connection signal="pressed" from="mode_back" to="." method="_on_mode_back_pressed"]
